--- a/src/shared/assets/styles/main.scss
+++ b/src/shared/assets/styles/main.scss
@@ -1,8 +1,5 @@
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  background-color: #FFFFFF;
+  padding: 1rem;
+  background-color: #ffffff;
 }
